# gemini-commit-message

./: .env  Cargo.toml  README.md
.github/workflows/: codeql.yml
src/: main.rs
