[package]
name = "gemini-commit-message"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
dotenvy = "0.15.7"
git2 = "0.20.2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
